# tilezz

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MAINTENANCE.md  NEW_VERTEX_TYPES.md  NT_BFS_DESIGN.md  NT_BFS_IMPLEMENTATION.md  PATCH.md  PATCH_REVIEW.md  README.md  SPEED_ANALYSIS.md  TILE_GRAMMARS.md  VERTEX_TYPE_REFACTOR.md  VTSEQ_EXPLORER.md  build.rs  justfile  tilezz_example.ipynb
.github/workflows/: ci.yml  pages.yml
docker/: Dockerfile  dev-sandbox.sh  provision.sh  rust-sandbox.sh
docs/: oeis.md  sign-only-geometry-refactor.md
docs/oeis-A284869-zz6-a22/: README.md  zz6_modpruneonly_bylen.txt  zz6_native_bylen.txt
docs/oeis-A316200-correction/: README.md  zz10_independent.py  zz10_pointset_crosscheck.py
examples/: cyclotomic.ipynb  minimal.ipynb  tilezz_examples.ipynb
notebooks/: check.py  cyclotomic.ipynb  minimal.ipynb  tilezz_examples.ipynb
src/: angles.rs  cyclotomic.rs  gaussint.rs  grid.rs  lib.rs  main.rs  matches.rs  plotters.rs  plotutils.rs  prelude.rs  qq.rs  rat.rs  snake.rs  traits.rs  vis.rs  zz.rs  zzbase.rs  zzgeom.rs  zzparams.rs  zzsigned.rs  zzutil.rs
src/analysis/: matchfinder.rs  matchtypes.rs  mod.rs  neighborhood.rs  patch_enum.rs  seq_explorer.rs  vertextypes.rs
src/cyclotomic/: constants.rs  dispatch.rs  div.rs  gaussint.rs  geometry.rs  integral_basis.rs  linalg.rs  mod.rs  numtraits.rs  params.rs  rings.rs  sign.rs  sign_extra_tests.rs  symnum.rs  traits.rs  types.rs  unit_tests.rs  units.rs  zz12.rs
src/geom/: angles.rs  cyclic.rs  glue.rs  grid.rs  matches.rs  matchtypes.rs  mod.rs  neighborhood.rs  patch.rs  rat.rs  snake.rs  tiles.rs  tileset.rs  vertextypes.rs  vertices.rs
src/intgeom/: angles.rs  boundary_vtype.rs  glue.rs  grid.rs  growing.rs  matchtypes.rs  mod.rs  neighborhood.rs  patch.rs  rat.rs  redelmeier.rs  segbfs.rs  segment_vertex_types.rs  segrewrite.rs  segseqbfs.rs  segtypes.rs  seq_explorer.rs  snake.rs  tiles.rs  tileset.rs  vertextypes.rs  vtseq_explorer.rs
src/misc/: mod.rs  patch_enum.rs  patch_grow.rs  seq_explorer.rs  vtseq_explorer.rs
src/rat_enum/: canonical.rs  dfs.rs  mod.rs  stats.rs
src/rat_enum/output/: mod.rs  render.rs  stats_summary.rs
src/rat_enum/prune/: closure_key.rs  closure_table.rs  mod.rs  modular.rs  shadow.rs  units.rs
src/rat_enum/seed/: external.rs  mod.rs  parallel.rs
src/rat_enum/stream/: enumerate.rs  merge.rs  mod.rs  progress.rs  records.rs  runs.rs
src/stringmatch/: ROADMAP.md  bitparallel.rs  cyclic.rs  dafsa.rs  dafsa_schema.txt  extend.rs  lcp.rs  maximal.rs  mod.rs  period.rs  rat_dafsa.rs  rat_dafsa_lazy.rs  rat_dafsa_schema.txt  rmq.rs  sais.rs
src/stringmatch/dafsa/: blocks_schema.txt  core.rs  lazy.rs  mod.rs  rat.rs  rocrate.rs
src/stringmatch/dafsa/extras/: count.py  count_by_length.py  decode.py  verify.rs  verify_canonical.py  verify_counts.py  verify_sha256.py
src/stringmatch/dafsa/schemas/: block_index.schema.json  blocks_schema.txt  core_schema.txt  rat_schema.txt
src/util/: mod.rs  profile.rs
src/vis/: animation.rs  draw.rs  mod.rs  notebook.rs  plotters.rs  plotutils.rs  raster.rs  scene.rs
src/web/: mod.rs  rat_explorer.rs
web/: datasets.json  explorer.js  index.html  style.css
web/ratdb/: datasets.json  explorer.js  index.html  style.css
