[package]
name = "tilezz"
version = "0.0.4"
authors = ["Anton Pirogov <apirogov@users.noreply.github.com>"]
description = "Utilities to work with perfect-precision polygonal tiles built on top of cyclotomic integer rings."
license = "MIT"

readme = "README.md"
repository = "https://github.com/apirogov/tilezz"
keywords = ["2d", "geometry", "tilings", "math", "algebra"]
categories = ["mathematics", "graphics"]

edition = "2024"

exclude = ["examples/*"]

[dependencies]
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
flate2 = "1.0"
blake3 = "1.5"
sha2 = "0.10"

clap = { version = "4.5.27", features = ["derive"], optional = true }
num_cpus = { version = "1.16.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rustc-hash = "2.1.2"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }
gif = { version = "0.13", optional = true }

[dev-dependencies]
# Validates the produced block_index.json against
# src/stringmatch/dafsa/schemas/block_index.schema.json. Test-only;
# no runtime cost.
jsonschema = { version = "0.34", default-features = false }

[features]
default = ["examples"]
pprof = ["dep:pprof"]
# Emits log lines counting how many sign-at-cubic-root queries fall
# through to the Sturm fallback. Used to size the bisection threshold.
sign_profile = []
# Enables the CLI binaries (clap + threading + gif/png output).
examples = ["dep:clap", "dep:crossbeam", "dep:num_cpus", "animation"]
# Pure-Rust raster output (PNG) via resvg + tiny-skia.
raster = ["dep:resvg", "dep:tiny-skia"]
# Multi-frame GIF output. Implies `raster`.
animation = ["raster", "dep:gif"]
