[package]
name = "tilezz"
version = "0.0.4"
authors = ["Anton Pirogov <apirogov@users.noreply.github.com>"]
description = "Utilities to work with perfect-precision polygonal tiles built on top of cyclotomic integer rings."
license = "MIT"

readme = "README.md"
repository = "https://github.com/apirogov/tilezz"
keywords = ["2d", "geometry", "tilings", "math", "algebra"]
categories = ["mathematics", "graphics"]

edition = "2024"

# Curated allowlist of what lands in the published crate. New top-
# level directories (literature/, docs/, web/, docker/, .github/,
# justfile, AGENTS.md, examples/, ...) default to "not in the crate"
# unless explicitly enumerated here. Lib consumers need src/ (which
# transitively includes the schema files + the standalone Python
# decoder/verifier shipped inside each emitted RO-Crate asset),
# Cargo.toml + Cargo.lock for pinning, the build script, and the
# human-readable README + LICENSE.
include = [
    "/src/**/*",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

# All binaries are gated behind the `cli` feature so `cargo build` /
# `cargo install tilezz` (default features = empty) only build the
# library. Pass `--features cli` to compile the CLI tooling.
[[bin]]
name = "rat_enum"
path = "src/bin/rat_enum.rs"
required-features = ["cli"]

[[bin]]
name = "tileset_collect"
path = "src/bin/tileset_collect.rs"
required-features = ["cli"]

[[bin]]
name = "cyc_explore"
path = "src/bin/cyc_explore.rs"
required-features = ["cli"]

[[bin]]
name = "patch_enum"
path = "src/bin/patch_enum.rs"
required-features = ["cli"]

[[bin]]
name = "polyomino"
path = "src/bin/polyomino.rs"
required-features = ["cli"]

[[bin]]
name = "build_web_rocrate"
path = "src/bin/build_web_rocrate.rs"
required-features = ["cli"]

[dependencies]
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
flate2 = "1.0"
blake3 = "1.5"
sha2 = "0.10"

clap = { version = "4.5.27", features = ["derive"], optional = true }
num_cpus = { version = "1.16.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rustc-hash = "2.1.2"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }
gif = { version = "0.13", optional = true }

[dev-dependencies]
# Validates the produced block_index.json against
# src/stringmatch/dafsa/schemas/block_index.schema.json. Test-only;
# no runtime cost.
jsonschema = { version = "0.34", default-features = false }

[features]
# Empty default keeps the library installable as a pure-Rust
# dependency without dragging in clap / crossbeam / num_cpus
# (CLI binaries). Opt in to `cli` for `cargo install tilezz`.
default = []
# Diagnostic instrumentation: pprof flamegraph wiring for the CLI
# binaries' `--pprof <PATH>` flag + the sign-at-cubic-root call
# counter in `cyclotomic::sign` (emits `[sign_profile] total=...`
# lines at every power-of-two call count beyond 1024). Off by
# default; turn on when tuning the Sturm fallback threshold or
# chasing a hot loop with flamegraph.
debug = ["dep:pprof"]
# Enables the enumeration CLI binaries: rat_enum, cyc_explore,
# patch_enum, polyomino, tileset_collect (clap + threading + gif/png
# output for the matchstick-polygon DFS workflows).
cli = ["dep:clap", "dep:crossbeam", "dep:num_cpus", "animation"]
# Pure-Rust raster output (PNG) via resvg + tiny-skia.
raster = ["dep:resvg", "dep:tiny-skia"]
# Multi-frame GIF output. Implies `raster`.
animation = ["raster", "dep:gif"]
