[package]
name = "tilezz"
version = "0.1.2"
authors = ["Anton Pirogov <apirogov@users.noreply.github.com>"]
description = "Utilities to work with perfect-precision polygonal tiles built on top of cyclotomic integer rings."
license = "MIT"

readme = "README.md"
repository = "https://github.com/apirogov/tilezz"
keywords = ["2d", "geometry", "tilings", "math", "algebra"]
categories = ["mathematics", "graphics"]

edition = "2024"

# Curated allowlist of what lands in the published crate. New top-
# level directories (literature/, docs/, web/, docker/, .github/,
# justfile, AGENTS.md, examples/, ...) default to "not in the crate"
# unless explicitly enumerated here. Lib consumers need src/ (which
# transitively includes the schema files + the standalone Python
# decoder/verifier shipped inside each emitted RO-Crate asset),
# Cargo.toml + Cargo.lock for pinning, the build script, and the
# human-readable README + LICENSE.
include = [
    "/src/**/*",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

# All binaries are gated behind a feature so `cargo build` /
# `cargo install tilezz` (default features = empty) only build the
# library. Pass `--features cli` for the enumeration CLIs. The two
# dev/build-time tools (build_web_rocrate, favicon) additionally
# require the `dev-tools` marker feature -- which no normal feature
# pulls in -- so enabling cli / raster / animation / rat_explorer for
# the library or research CLIs never drags them into a `cargo install`.
[[bin]]
name = "rat_enum"
path = "src/bin/rat_enum.rs"
required-features = ["cli"]

[[bin]]
name = "tileset_collect"
path = "src/bin/tileset_collect.rs"
required-features = ["cli"]

[[bin]]
name = "cyc_explore"
path = "src/bin/cyc_explore.rs"
required-features = ["cli"]

[[bin]]
name = "patch_enum"
path = "src/bin/patch_enum.rs"
required-features = ["cli"]

[[bin]]
name = "polyomino"
path = "src/bin/polyomino.rs"
required-features = ["cli"]

# Web-app deploy helper: stitches the top-level RO-Crate that lists the
# explorer's datasets. Needs `rat_explorer` (it shares the web module's
# wasm bindings, which are no-ops on this native build) AND the
# `dev-tools` marker, so building the WASM bundle with `rat_explorer`
# alone never drags this native bin in.
[[bin]]
name = "build_web_rocrate"
path = "src/bin/build_web_rocrate.rs"
required-features = ["dev-tools", "rat_explorer"]

# Dev-only asset generator: regenerates the web/ratdb favicon from the
# spectre tile via the `vis` renderer. Needs `raster` (resvg/tiny-skia
# for the PNG fallbacks) AND the `dev-tools` marker, so enabling raster
# on its own -- e.g. via `cli` -> `animation` -> `raster` -- never
# builds it.
[[bin]]
name = "favicon"
path = "src/bin/favicon.rs"
required-features = ["dev-tools", "raster"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
flate2 = "1.0"
blake3 = "1.5"
sha2 = "0.11"
data-encoding = "2.11"

clap = { version = "4.5.27", features = ["derive"], optional = true }
num_cpus = { version = "1.16.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rustc-hash = "2.1.2"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

resvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
gif = { version = "0.14", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Window", "Response", "Request", "RequestInit",
] }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
# Validates the produced block_index.json against
# src/stringmatch/dafsa/schemas/block_index.schema.json. Test-only;
# no runtime cost.
jsonschema = { version = "0.46", default-features = false }

[features]
# Empty default keeps the library installable as a pure-Rust
# dependency without dragging in clap / crossbeam / num_cpus
# (CLI binaries). Opt in to `cli` for `cargo install tilezz`.
default = []
# Diagnostic instrumentation: pprof flamegraph wiring for the CLI
# binaries' `--pprof <PATH>` flag + the sign-at-cubic-root call
# counter in `cyclotomic::sign` (emits `[sign_profile] total=...`
# lines at every power-of-two call count beyond 1024). Off by
# default; turn on when tuning the Sturm fallback threshold or
# chasing a hot loop with flamegraph.
debug = ["dep:pprof"]
# Enables the enumeration CLI binaries: rat_enum, cyc_explore,
# patch_enum, polyomino, tileset_collect (clap + threading + gif/png
# output for the matchstick-polygon DFS workflows).
cli = ["dep:clap", "dep:crossbeam", "dep:num_cpus", "animation"]
# Pure marker for the dev/build-time tool binaries (build_web_rocrate,
# favicon). Enables no deps of its own; it's AND-combined with each
# tool's real feature needs via `required-features`. Because no normal
# feature (cli, raster, animation, rat_explorer) implies it, a plain
# `cargo install tilezz --features cli` never builds those tools.
dev-tools = []
# Pure-Rust raster output (PNG) via resvg + tiny-skia.
raster = ["dep:resvg", "dep:tiny-skia"]
# Multi-frame GIF output. Implies `raster`.
animation = ["raster", "dep:gif"]
# The rat_explorer web app: WASM bindings consumed by the browser
# page AND the native `build_web_rocrate` bin that the Pages deploy
# pipeline runs. clap is in here too (for build_web_rocrate); the
# wasm-* crates compile to no-ops on native so the native build of
# build_web_rocrate doesn't pay for them. Build the browser bundle
# with `wasm-pack build --target web --no-default-features --features rat_explorer`.
rat_explorer = [
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:web-sys",
  "dep:serde-wasm-bindgen",
  "dep:clap",
]

# Disable wasm-pack's post-compile wasm-opt pass. wasm-pack downloads a
# pinned binaryen release from GitHub at build time to run it, and that
# download is flaky / blocked on the CI runner (the Pages deploy failed
# on it). The wasm compiles fine; we just skip the optional size pass.
# If a smaller bundle is wanted later, run wasm-opt from the runner's
# apt `binaryen` on web/ratdb/pkg/tilezz_bg.wasm in pages.yml instead.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
